--- a/config/car_goal_hazard_time_memory.yaml
+++ b/config/car_goal_hazard_time_memory.yaml
@@ -1,6 +1,6 @@
 # Configuaration for the goal hazard car environement
 
-experiment_name : 'car_goal_hazard_sac'
+experiment_name : 'CarGoalHazardACS_memory'
 
 environment:
   #The environment to use
@@ -19,7 +19,7 @@ environment:
 
 render : True
 epochs : 100
-steps_per_epoch : 10000 #10000
+steps_per_epoch : 10000
 
 #agent parameters
 min_epsilon: 0.01
@@ -31,10 +31,14 @@ on_policy : False
 
 # OFF POLICY parameters
 off_policy : True
-update_frequency: 512 #execute a step of training after this number of environment steps
+update_frequency: 214 #execute a step of training after this number of environment steps
 steps_in_future:  10
 batch_size: 64
 
 discount_factor: 0.99
+initial_variance: 1000
+final_variance: 0.0001
 
 has_continuous_action_space : True
+
+state_in_memory: 3
