Added Cartpole for testing

--- a/config/car_goal_hazard_time_memory.yaml
+++ b/config/car_goal_hazard_time_memory.yaml
@@ -8,13 +8,13 @@ environment:
   task : 'goal'
   observation_flatten : True
   observe_goal_lidar : True
-  observe_hazards : True
+  observe_hazards : False #True
   constrain_hazards : True
   # lidar_max_dist : 3
   lidar_num_bins : 16
   hazards_num : 4
   observe_sensors : False # Disable visualizations of internal sensors for simpler state management    
-  continue_goal: False  # If true, draw a new goal after achievement
+  continue_goal: True  # If true, draw a new goal after achievement
   lidar_max_dist: 10  # Maximum distance for lidar sensitivity (if None, exponential distance)
 
 render : True
