--- a/config/car_goal_hazard.yaml
+++ b/config/car_goal_hazard.yaml
@@ -17,6 +17,10 @@ environment:
   continue_goal: False  # If true, draw a new goal after achievement
   lidar_max_dist: 10  # Maximum distance for lidar sensitivity (if None, exponential distance)
 
+#the start and the end of the section of the vector we are interested in
+goal_start: 0
+goal_end: 16
+
 render : True
 epochs : 100
 steps_per_epoch : 10000
