--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: car_goal_hazards_time_memory File",
+            "name": "Python: car_goal_hazards File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/src/car_goal_hazards_time_memory.py",
+            "program": "${workspaceFolder}/src/car_goal_hazards_acs.py",
             "console": "integratedTerminal"
         }
     ]
