refactor: everything in single run experiment file
Main refactor done, config files unified and we can run multiple agents
type from main file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: car_goal_hazards File",
+            "name": "Python: Experiments File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/src/car_goal_hazards_acs.py",
+            "program": "${workspaceFolder}/src/run_experiment.py",
             "console": "integratedTerminal"
         }
     ]
