--- a/config/car_goal_acs_test_policy.yaml
+++ b/config/car_goal_acs_test_policy.yaml
@@ -4,6 +4,8 @@ experiment_name : "CarGoalHazardACS_inference"
 
 training: False
 
+agent_kind : 'ACS'
+
 environment:
   #The environment to use
   robot_base: 'xmls/car.xml'
@@ -12,7 +14,6 @@ environment:
   observe_goal_lidar : True
   observe_hazards : False #True
   constrain_hazards : True
-  # lidar_max_dist : 3
   lidar_num_bins : 16
   hazards_num : 4
   observe_sensors : False # Disable visualizations of internal sensors for simpler state management
