--- a/config/car_goal_sac.yaml
+++ b/config/car_goal_sac.yaml
@@ -1,6 +1,10 @@
 # Configuaration for the goal hazard car environement
 
-experiment_name : 'car_goal_hazard_sac'
+experiment_name : 'CarGoalHazardSAC'
+
+training: True
+
+agent_kind : 'SAC'
 
 environment:
   #The environment to use
@@ -8,26 +12,30 @@ environment:
   task : 'goal'
   observation_flatten : True
   observe_goal_lidar : True
-  observe_hazards : True
+  observe_hazards : False #True
   constrain_hazards : True
   # lidar_max_dist : 3
   lidar_num_bins : 16
   hazards_num : 4
   observe_sensors : False # Disable visualizations of internal sensors for simpler state management    
-  continue_goal: False  # If true, draw a new goal after achievement
+  continue_goal: True # If true, draw a new goal after achievement
   lidar_max_dist: 10  # Maximum distance for lidar sensitivity (if None, exponential distance)
+
+has_continuous_action_space : True
+
+#the start and the end of the section of the vector we are interested in
+# goal_start: 0
+# goal_end: 16
 
 render : True
 epochs : 100
-steps_per_epoch : 10000 #10000
+steps_per_epoch : 10000
 
-#agent parameters
-min_epsilon: 0.01
-parameters:
-  alpha : 0.1
-
-#ON POLICY parameters
-on_policy : False
+#agent hyperparameters
+alpha : 0.2
+gamma : 0.99
+polyak : 0.995
+learning_rate : 0.001
 
 # OFF POLICY parameters
 off_policy : True
@@ -37,4 +45,4 @@ batch_size: 64
 
 discount_factor: 0.99
 
-has_continuous_action_space : True
+state_in_memory: 5
