--- a/config/tests/test_car_goal_acs_training.yaml
+++ b/config/tests/test_car_goal_acs_training.yaml
@@ -1,10 +1,12 @@
 # Configuaration for the goal hazard car environement
 
-experiment_name : 'CarGoal_SAC'
+experiment_name : 'Test_CarGoalHazardACS'
 
 training: True
+render : False
+logging_level : "NO_LOG"
 
-agent_kind : 'SAC'
+agent_kind : 'ACS'
 
 environment:
   #The environment to use
@@ -18,7 +20,7 @@ environment:
   lidar_num_bins : 16
   hazards_num : 4
   observe_sensors : False # Disable visualizations of internal sensors for simpler state management    
-  continue_goal: True # If true, draw a new goal after achievement
+  continue_goal: True  # If true, draw a new goal after achievement
   lidar_max_dist: 10  # Maximum distance for lidar sensitivity (if None, exponential distance)
 
 has_continuous_action_space : True
@@ -27,22 +29,24 @@ has_continuous_action_space : True
 # goal_start: 0
 # goal_end: 16
 
-render : True
-epochs : 100
-steps_per_epoch : 10000
+epochs : 1
+steps_per_epoch : 1000
 
-#agent hyperparameters
-alpha : 0.2
-gamma : 0.99
-polyak : 0.995
-learning_rate : 0.001
+#ON POLICY parameters
+on_policy : False
 
 # OFF POLICY parameters
 off_policy : True
-update_frequency: 512 #execute a step of training after this number of environment steps
+update_frequency: 64 #execute a step of training after this number of environment steps
 steps_in_future:  10
-batch_size: 64
+batch_size: 32
 
 discount_factor: 0.99
+initial_variance: 1000
+final_variance: 0.0001
 
-state_in_memory: 5
+
+state_in_memory: 3 #number of states observed used as single observation
+
+#Hyperparameters
+learning_rate : 0.001
