--- a/config/tests/test_cartpole_sac_training.yaml
+++ b/config/tests/test_cartpole_sac_training.yaml
@@ -1,8 +1,10 @@
 # Configuaration for the goal hazard car environement
 
-experiment_name : 'Cartpole_SAC'
+experiment_name : 'Test_Cartpole_SAC'
 
 training: True
+render : False
+logging_level : "NO_LOG"
 
 has_continuous_action_space : False
 
@@ -14,25 +16,24 @@ environment: 'CartPole-v1'
 # goal_start: 0
 # goal_end: 0
 
-render : True
-epochs : 100
-steps_per_epoch : 10000
+epochs : 1
+steps_per_epoch : 1000
 
 #ON POLICY parameters
 on_policy : False
 
 # OFF POLICY parameters
 off_policy : True
-update_frequency: 128 #execute a step of training after this number of environment steps
+update_frequency: 64 #execute a step of training after this number of environment steps
 steps_in_future:  10
-batch_size: 64
+batch_size: 32
 
 discount_factor: 0.99
 initial_variance: 1000
 final_variance: 0.0001
 
 
-state_in_memory: 5
+state_in_memory: 3
 
 #agent hyperparameters
 alpha : 0.2
