--- a/config/car_goal_sac_distance.yaml
+++ b/config/car_goal_sac_distance.yaml
@@ -1,10 +1,11 @@
 # Configuaration for the goal hazard car environement
 
-experiment_name : 'CarGoal_ACS'
+experiment_name : 'CarGoal_SAC_reward'
 
 training: True
 
-agent_kind : 'ACS'
+agent_kind : 'SAC'
+reward_kind: 'DISTANCE'
 
 environment:
   #The environment to use
@@ -18,7 +19,7 @@ environment:
   lidar_num_bins : 16
   hazards_num : 4
   observe_sensors : False # Disable visualizations of internal sensors for simpler state management    
-  continue_goal: True  # If true, draw a new goal after achievement
+  continue_goal: True # If true, draw a new goal after achievement
   lidar_max_dist: 10  # Maximum distance for lidar sensitivity (if None, exponential distance)
 
 has_continuous_action_space : True
@@ -31,21 +32,20 @@ render : True
 epochs : 100
 steps_per_epoch : 10000
 
-#ON POLICY parameters
-on_policy : False
-
+#agent hyperparameters
+alpha : 0.2
+gamma : 0.99
+polyak : 0.995
+learning_rate : 0.001
+epsilon_start : 0.9
+epsilon_end : 0.05
+epsilon_decay : 0.995
 # OFF POLICY parameters
 off_policy : True
-update_frequency: 214 #execute a step of training after this number of environment steps
+update_frequency: 512 #execute a step of training after this number of environment steps
 steps_in_future:  10
 batch_size: 64
 
 discount_factor: 0.99
-initial_variance: 1000
-final_variance: 0.0001
 
-
-state_in_memory: 1 #number of states observed used as single observation
-
-#Hyperparameters
-learning_rate : 0.001
+state_in_memory: 5
