--- a/config/tests/test_cartpole_sac_reward_inference.yaml
+++ b/config/tests/test_cartpole_sac_reward_inference.yaml
@@ -1,6 +1,6 @@
 # Configuaration for the goal hazard car environement
 
-experiment_name : 'Test_Cartpole_ACS'
+experiment_name : 'Test_Cartpole_SAC'
 
 training: True
 render : False
@@ -8,7 +8,8 @@ logging_level : "NO_LOG"
 
 has_continuous_action_space : False
 
-agent_kind : 'ACS'
+agent_kind : 'SAC'
+reward_kind: 'REWARD'
 
 environment: 'CartPole-v1'
 
@@ -17,7 +18,7 @@ environment: 'CartPole-v1'
 # goal_end: 0
 
 epochs : 1
-steps_per_epoch : 100
+steps_per_epoch : 1000
 
 #ON POLICY parameters
 on_policy : False
@@ -36,4 +37,10 @@ final_variance: 0.0001
 state_in_memory: 3
 
 #agent hyperparameters
+alpha : 0.2
+gamma : 0.99
+polyak : 0.995
 learning_rate : 0.001
+epsilon_start : 0.9
+epsilon_end : 0.05
+epsilon_decay : 0.995
